--- a/melt_eng.dict.yaml
+++ b/melt_eng.dict.yaml
@@ -5,7 +5,7 @@ sort: by_weight
 use_preset_vocabulary: true
 # 此处为 输入法所用到的词库，既补充拓展词库的地方
 import_tables:
-  - dicts/rime_ice.en_ext   # 雾凇拼音-英文扩展
-  - dicts/rime_ice.en       # 雾凇拼音-英文Base
+  - dicts/en_dicts/en_ext   # 雾凇拼音-英文扩展
+  - dicts/en_dicts/en       # 雾凇拼音-英文Base
  # - easy_en # Easy-en基础
 ...
