--- a/terra_pinyin.dict.yaml
+++ b/terra_pinyin.dict.yaml
@@ -6,11 +6,36 @@ sort: by_weight
 # 此处为 输入法所用到的词库，既补充拓展词库的地方
 # 雾凇拼音词库，由Github Robot自动更新
 import_tables:
-  - dicts/rime_mint.chars        # 单字词库（万象拼音词库基础版本）
-  - dicts/rime_mint.base         # 基础词库（万象拼音词库基础版本）
-  - dicts/rime_mint.correlation  # 关联词库（万象拼音词库基础版本）
-  - dicts/rime_mint.ext          # 联想词库（万象拼音词库基础版本）
-  - dicts/other_kaomoji          # 颜文字表情（按`vv`呼出)
-  # 20240608 Emoji完全交由OpenCC，不再使用字典作为补充
-  # - dicts/other_emoji            # Emoji(仅仅作为补充，实际使用一般是OpenCC生效)
+  - dicts/custom_simple          # 自定义
+  - dicts/cn_dicts/8105           # 字表
+  - dicts/cn_dicts/41448         # 大字表（按需启用）
+  - dicts/cn_dicts/base         # 基础词库
+  - dicts/cn_dicts/ext          # 扩展词库
+  - dicts/cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
+  - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
+  - dicts/cn_dicts/others        # 雾凇拼音 others词库（用于自动纠错）
+
+  # 细胞词库
+  - dicts/cn_dicts_cell/medication
+  - dicts/cn_dicts_cell/industry_product
+  - dicts/cn_dicts_cell/exthot
+  - dicts/cn_dicts_cell/chess
+  - dicts/cn_dicts_cell/chess2
+  - dicts/cn_dicts_cell/animal
+  - dicts/cn_dicts_cell/game
+  - dicts/cn_dicts_cell/idiom
+  - dicts/cn_dicts_cell/sport
+  - dicts/cn_dicts_cell/media
+  - dicts/cn_dicts_cell/shulihua
+  - dicts/cn_dicts_cell/food
+  - dicts/cn_dicts_cell/inputmethod
+  - dicts/cn_dicts_cell/history
+  - dicts/cn_dicts_cell/place
+  - dicts/cn_dicts_cell/geography
+  - dicts/cn_dicts_cell/name2
+  - dicts/cn_dicts_cell/literature
+  - dicts/cn_dicts_cell/music
+  - dicts/cn_dicts_cell/computer
+  - dicts/cn_dicts_cell/composite
+  - dicts/cn_dicts_cell/name
 ...
