--- a/default.yaml
+++ b/default.yaml
@@ -12,7 +12,7 @@ config_version: "24.03.24"
 ## 九宫格依赖于 rime_mint ，如果需要使用其他方案（比如: 小鹤双拼的 九宫格），可以使用 custom 文件覆写
 schema_list:
   - schema: double_pinyin_flypy  # 小鹤双拼
-  - schema: terra_pinyin  # 地平线拼音
+  - schema: terra_pinyin_all  # 地平线拼音
 
 switcher:
   # 切换方案时显示的标题
