--- a/terra_pinyin_all.dict.yaml
+++ b/terra_pinyin_all.dict.yaml
@@ -7,13 +7,23 @@ sort: by_weight
 # 雾凇拼音词库，由Github Robot自动更新
 import_tables:
   - dicts/custom_simple          # 自定义
-  - dicts/cn_dicts/8105           # 字表
-  - dicts/cn_dicts/41448         # 大字表（按需启用）
-  - dicts/cn_dicts/base         # 基础词库
-  - dicts/cn_dicts/ext          # 扩展词库
-  - dicts/cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
-  - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
-  - dicts/cn_dicts/others        # 雾凇拼音 others词库（用于自动纠错）
+  # - dicts/cn_dicts/8105           # 字表
+  # - dicts/cn_dicts/41448         # 大字表（按需启用）
+  # - dicts/cn_dicts/base         # 基础词库
+  # - dicts/cn_dicts/ext          # 扩展词库
+  # - dicts/cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
+  # - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
+  # - dicts/cn_dicts/others        # 雾凇拼音 others词库（用于自动纠错）
+
+  - dicts/dicts_LMDG/corrections         # 错字纠音最优先
+  - dicts/dicts_LMDG/chars               # 单字基础保障
+  - dicts/dicts_LMDG/base                # 常用词，主干
+  - dicts/dicts_LMDG/compatible          # 多音优化
+  - dicts/dicts_LMDG/correlation         # 四字成词
+  - dicts/dicts_LMDG/suggestion          # 五字以上联想
+  - dicts/dicts_LMDG/people              # 人名
+  - dicts/dicts_LMDG/place               # 地名
+  - dicts/dicts_LMDG/poetry              # 诗词/成语/典故类，靠后
 
   # 细胞词库
   - dicts/cn_dicts_cell/medication
