--- a/dicts/dicts_LMDG/compatible.dict.yaml
+++ b/dicts/dicts_LMDG/compatible.dict.yaml
@@ -7,6 +7,105 @@ name: compatible
 version: "LTS"
 sort: by_weight
 ...
+糖色	táng shǎi	348
+又得	yòu děi	421
+拂过	bì guò	476
+粘着	zhān zhe	510
+当时	dàng shí
+当日	dàng rì
+当年	dàng nián
+当头	dàng tóu
+铁骑	tiě qí
+垫圈	diàn juàn
+大黄	dài huáng
+调调	tiáo tiáo	462
+明朝	míng zhāo	326
+忒过瘾	tēi guò yǐn	81
+忒好吃	tēi hǎo chī	136
+忒好看	tēi hǎo kàn	56
+忒好了	tēi hǎo le	133
+忒看的	tēi kàn de	88
+忒可爱	tēi kě ài	108
+忒快了	tēi kuài le	146
+忒冷了	tēi lěng le	94
+忒麻烦	tēi má fán	102
+忒慢了	tēi màn le	75
+忒美了	tēi měi le	88
+忒难看	tēi nán kàn	92
+忒牛逼	tēi niú bī	86
+忒便宜	tēi pián yi	74
+忒强了	tēi qiáng le	88
+忒少了	tēi shǎo le	182
+忒甜了	tēi tián le	42
+忒喜欢	tēi xǐ huān	114
+忒吓人	tēi xià rén	95
+忒小了	tēi xiǎo le	148
+忒有才	tēi yǒu cái	104
+忒早了	tēi zǎo le	68
+忒长了	tēi zhǎng le	60
+忒矮了吧	tēi ǎi le ba	597
+忒白了吧	tēi bái le ba	597
+忒薄了吧	tēi báo le ba	597
+忒不方便	tēi bù fāng biàn	107
+忒不给力	tēi bù gěi lì	107
+忒不好看	tēi bù hǎo kàn	32
+忒不好走	tēi bù hǎo zǒu	597
+忒不讲究	tēi bù jiǎng jiu	133
+忒不靠谱	tēi bú kào pǔ	243
+忒不容易	tēi bù róng yì	107
+忒不是人	tēi bú shì rén	315
+忒不听话	tēi bù tīng huà	54
+忒不喜欢	tēi bù xǐ huān	1
+忒不要脸	tēi bú yào liǎn	138
+忒丑了吧	tēi chǒu le ba	597
+忒长了吧	tēi cháng le ba	597
+忒大了吧	tēi dà le ba	212
+忒短了吧	tēi duǎn le ba	597
+忒对不起	tēi duì bù qǐ	78
+忒多了吧	tēi duō le ba	597
+忒高了吧	tēi gāo le ba	124
+忒贵了吧	tēi guì le ba	597
+忒好了吧	tēi hǎo le ba	597
+忒黑了吧	tēi hēi le ba	597
+忒黑了点	tēi hēi le diǎn	67
+忒红了吧	tēi hóng le ba	597
+忒厚了吧	tēi hòu le ba	597
+忒坏了吧	tēi huài le ba	597
+忒黄了吧	tēi huáng le ba	597
+忒贱了吧	tēi jiàn le ba	597
+忒近了吧	tēi jìn le ba	412
+忒旧了吧	tēi jiù le ba	597
+忒苦了吧	tēi kǔ le ba	597
+忒宽了吧	tēi kuān le ba	597
+忒懒了吧	tēi lǎn le ba	597
+忒蓝了吧	tēi lán le ba	597
+忒浪漫了	tēi làng màn le	97
+忒冷了吧	tēi lěng le ba	597
+忒厉害了	tēi lì hai le	180
+忒绿了吧	tēi lǜ le ba	597
+忒没出息	tēi méi chū xī	1
+忒美了吧	tēi měi le ba	597
+忒没意思	tēi méi yì sī	107
+忒木勒哥	tēi mù lè gē	57
+忒便宜了	tēi pián yi le	638
+忒浅了吧	tēi qiǎn le ba	597
+忒强了吧	tēi qiáng le ba	597
+忒轻了吧	tēi qīng le ba	597
+忒软了吧	tēi ruǎn le ba	597
+忒弱了吧	tēi ruò le ba	597
+忒少了吧	tēi shǎo le ba	597
+忒深了吧	tēi shēn le ba	597
+忒他妈的	tēi tā mā de	54
+忒甜了吧	tēi tián le ba	597
+忒小了吧	tēi xiǎo le ba	597
+忒新了吧	tēi xīn le ba	597
+忒硬了吧	tēi yìng le ba	597
+忒有意思	tēi yǒu yì sī	124
+忒远了吧	tēi yuǎn le ba	597
+忒脏了吧	tēi zāng le ba	597
+忒窄了吧	tēi zhǎi le ba	597
+忒长了吧	tēi zhǎng le ba	597
+忒重了吧	tēi zhòng le ba	597
 没收	méi shōu	407
 暴晒	pù shài
 大王	dài wang	430
@@ -81,6 +180,8 @@ sort: by_weight
 多行	duō háng	491
 不了了	bù liǎo liǎo	542
 不了了	bù liǎo le	413
+爿字旁	chuáng zì páng
+爿字旁	pán zì páng
 肚子	dù zi	650
 肚子	dǔ zi	312
 落了	là le	542
@@ -164,7 +265,6 @@ sort: by_weight
 不为	bù wéi	623
 不长	bù zhǎng	329
 长的	cháng de	802
-长牙	cháng yá	84
 长头发	cháng tóu fā	503
 长头发	zhǎng tóu fā	503
 长尾巴	cháng wěi bā	399
@@ -224,8 +324,9 @@ sort: by_weight
 炸鱼	zhá yú	544
 炸鱼	zhà yú	28
 长的	zhǎng de	919
-长相	zhǎng xiàng	429
-长牙	zhǎng yá	283
+长牙	zhǎng yá	583
+长牙	cháng yá	384
+长芽	cháng yá	365
 重活	zhòng huó	391
 重活	chóng huó	265
 按这	àn zhèi	403
@@ -4770,6 +4871,9 @@ sort: by_weight
 嘴里的软舌头	zuǐ lǐ de ruǎn shé tou	1
 嘴里有个舌头	zuǐ lǐ yǒu gè shé tou	1
 嘴说腿爱跑腿	zuǐ shuō tuǐ ài pǎo tuǐ	1
+每只大石狮子	měi zhī dà shí shī zi	1
+一只小石狮子	yì zhī xiǎo shí shī zi	1
+四只小石狮子	sì zhī xiǎo shí shī zi	1
 八百标兵奔北坡	bā bǎi biāo bīng bēn běi pō	1
 八朵粉红大荷花	bā duǒ fěn hóng dà hé huā	1
 板凳没有扁担长	bǎn dèng méi yǒu biǎn dàn cháng	1
@@ -5083,8 +5187,6 @@ sort: by_weight
 高高山上一条藤高高山上一条藤	gāo gāo shān shàng yì tiáo téng gāo gāo shān shàng yì tiáo téng	1
 小葛把他的黄花换了小郭的红花	xiǎo gé bǎ tā de huáng huā huàn le xiǎo guō de hóng huā	1
 小郭想拿他的红花换小葛的黄花	xiǎo guō xiǎng ná tā de hóng huā huàn xiǎo gé de huáng huā	1
-每只大石狮子背上是一只小石狮子	měi zhǐ dà shí shī zi bèi shàng shì yì zhī xiǎo shí shī zi	1
-每只大石狮子脚边是四只小石狮子	měi zhǐ dà shí shī zi jiǎo biān shì sì zhǐ xiǎo shí shī zi	1
 拿喇叭打了提拉塔嘛的喇嘛一喇叭	ná lǎ bā dǎ le tí lā tǎ ma de lǎ ma yī lǎ bā	1
 三娘找山羊三娘在山上放三只山羊	sān niáng zhǎo shān yáng sān niáng zài shān shàng fàng sān zhǐ shān yáng	1
 史老师领四十四个学生去数石狮子	shǐ lǎo shī lǐng sì shí sì gè xué shēng qù shù shí shī zi	1
