--- a/dicts/dicts_LMDG/corrections.dict.yaml
+++ b/dicts/dicts_LMDG/corrections.dict.yaml
@@ -15,16 +15,16 @@ sort: by_weight
 麻麻赖赖	má má lài lài	156	(网络语)
 绝代双椒	jué dài shuāng jiāo	300	(网络语)
 毁人不倦	huǐ rén bú juàn	431	(歌曲名)
-满山遍野	mǎn shān biàn yě	519	(漫)山遍野
 佛教胜地	fó jiào shèng dì	1	佛教(圣)地
 杉杉来吃	shān shān lái chī	424	(书名)
-一泄千里	yī xiè qiān lǐ	315	(玩笑语)
-美丽冻人	měi lì dòng rén	123	(俏皮话)
-老肩巨滑	lǎo jiān jù huá	233	(玩笑语)
 食话食说	shí huà shí shuō	247	(节目)
 大栅栏	da zha lan	232	dà shí làn
 东庠岛	dong yang dao	98	东庠(xiáng)岛
+视频	shi ping	485	视频(pín)
+剖腹产	pao fu chan	165	剖(pōu)腹产
 阻塞	zu sai	20	阻塞(sè)
+着想	zhao xiang	368	着(zhuó)想
+崩溃	ben kui	482	崩(bēng)溃
 句芒	ju mang	317	句(gōu)芒
 烘焙	hong pei	402	hōng bèi
 谄媚	xian mei	303	chǎn mèi
