--- a/rime_mint.dict.yaml
+++ b/rime_mint.dict.yaml
@@ -12,7 +12,7 @@ import_tables:
   # - dicts/cn_dicts/base         # 基础词库
   # - dicts/cn_dicts/ext          # 扩展词库
   # - dicts/cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
-  # - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
+  # 
   # - dicts/cn_dicts/others        # 雾凇拼音 others词库（用于自动纠错）
 
   - dicts/dicts_LMDG/corrections         # 错字纠音最优先
@@ -22,7 +22,8 @@ import_tables:
   - dicts/dicts_LMDG/correlation         # 四字成词
   - dicts/dicts_LMDG/poetry              # 诗词/成语/典故类，靠后
   - dicts/dicts_LMDG/suggestion          # 五字以上联想
-  # - dicts/tencent_replace                # ✅ 腾讯词向量扩展（已去重，位置靠后）
+  - dicts/tencent_replace                # ✅ 腾讯词向量扩展（已去重，位置靠后）
+  - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
   - dicts/dicts_LMDG/people              # 人名
   - dicts/dicts_LMDG/place               # 地名
 
