--- a/dicts/dicts_LMDG/corrections.dict.yaml
+++ b/dicts/dicts_LMDG/corrections.dict.yaml
@@ -18,6 +18,8 @@ sort: by_weight
 佛教胜地	fó jiào shèng dì	1	佛教(圣)地
 杉杉来吃	shān shān lái chī	424	(书名)
 食话食说	shí huà shí shuō	247	(节目)
+零零总总	ling ling zong zong	56	(林林总总)
+文绉绉	wen zou zou	164	(zhōu)
 大栅栏	da zha lan	232	dà shí làn
 东庠岛	dong yang dao	98	东庠(xiáng)岛
 视频	shi ping	485	视频(pín)
